--- a/index.html
+++ b/index.html
@@ -83,13 +83,13 @@
                 </div>
                 <div class="card about-badge">
                     <img src="https://assets.hackclub.com/flag-orpheus-top.svg" alt="Orpheus">
-                    <p class="muted">Official Hack Club chapter since 2024</p>
+                    <p class="muted">Official Hack Club chapter since 2026</p>
                 </div>
             </div>
 
             <section class="stats">
                 <div class="stat">
-                    <span class="stat-number">3+</span>
+                    <span class="stat-number">2+</span>
                     <span class="stat-label">Active members (pls join we need more)</span>
                 </div>
                 <div class="stat">
@@ -116,7 +116,7 @@
                     <div class="founder-avatar">😎</div>
                     <div class="founder-info">
                         <h3 class="headline">Aaron Ho</h3>
-                        <span class="badge">Leader/Co-leader</span>
+                        <span class="badge"<Co-leader</span>
                         <p class="muted">A Sophomore who started the club in 2026. Loves learning about programming and playing the violin.</p>
                     </div>
                 </article>
