--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                 <a href="#" onclick="showPage('founders'); return false;">Team</a>
                 <a href="#" onclick="showPage('calendar'); return false;">Events</a>
             </div>
-            <p class="muted small">This site is open source. View it on <a href="https://github.com" target="_blank" class="primary-link">GitHub</a>.</p>
+            <p class="muted small">This site is open source. View it on <a href="https://github.com/Aaron1238/hack-club-cv" target="_blank" class="primary-link">GitHub</a>.</p>
         </div>
     </footer>
 
