--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
                 <h1 class="ultratitle">A club where you build<br>cool stuff!</h1>
                 <p class="subtitle">We're a club at CV who love making things with computers. No experience required — just bring an interest to learn!</p>
                 <div class="hero-buttons">
-                    <a href="#" class="button button-lg" onclick="showPage('about'); return false;">Join the club</a>
+                    <a href="https://hack.club/join/DTBKTY" class="button button-lg" target="_blank">Join Hack Club</a>
+                    <a href="#" class="button button-lg button-outline" onclick="showPage('about'); return false;">Learn more</a>
                     <a href="#" class="button button-lg button-outline" onclick="showPage('calendar'); return false;">See events</a>
                 </div>
             </section>
@@ -65,6 +66,7 @@
             <section class="welcome-card">
                 <h2 class="title">Everyone is welcome</h2>
                 <p class="subtitle">Whether you've never written a line of code or you're already shipping production apps, there's a place for you here. We believe the best way to learn is by building real projects.</p>
+                <a href="https://hack.club/join/DTBKTY" class="button mt-3" target="_blank">Join Hack Club Today</a>
             </section>
         </div>
 
@@ -80,16 +82,17 @@
                     <p class="lead">Hack Club CV started in 2026 (by a sophomore!) when a group of students at CVHS decided they wanted a space to build projects outside of class.</p>
                     <p class="muted">We're part of the global Hack Club network, but our community is uniquely ours. We run workshops, host hackathons, and spend a lot of time debugging code together (and occasionally debugging each other's life choices).</p>
                     <p class="muted">Our philosophy is simple: you learn best when you're building things you care about, surrounded by people who support you. No grades, no pressure — just genuine curiosity and the joy of making things work.</p>
+                    <a href="https://hack.club/join/DTBKTY" class="button button-lg mt-3" target="_blank">Join Hack Club</a>
                 </div>
                 <div class="card about-badge">
                     <img src="https://assets.hackclub.com/flag-orpheus-top.svg" alt="Orpheus">
-                    <p class="muted">Official Hack Club chapter since 2026</p>
+                    <p class="muted">Official Hack Club chapter since 2024</p>
                 </div>
             </div>
 
             <section class="stats">
                 <div class="stat">
-                    <span class="stat-number">2+</span>
+                    <span class="stat-number">3+</span>
                     <span class="stat-label">Active members (pls join we need more)</span>
                 </div>
                 <div class="stat">
@@ -116,7 +119,7 @@
                     <div class="founder-avatar">😎</div>
                     <div class="founder-info">
                         <h3 class="headline">Aaron Ho</h3>
-                        <span class="badge"<Co-leader</span>
+                        <span class="badge">Leader/Co-leader</span>
                         <p class="muted">A Sophomore who started the club in 2026. Loves learning about programming and playing the violin.</p>
                     </div>
                 </article>
@@ -183,6 +186,7 @@
                 <a href="#" onclick="showPage('about'); return false;">About</a>
                 <a href="#" onclick="showPage('founders'); return false;">Team</a>
                 <a href="#" onclick="showPage('calendar'); return false;">Events</a>
+                <a href="https://hack.club/join/DTBKTY" target="_blank">Join</a>
             </div>
             <p class="muted small">This site is open source. View it on <a href="https://github.com/Aaron1238/hack-club-cv" target="_blank" class="primary-link">GitHub</a>.</p>
         </div>
