--- a/index.html
+++ b/index.html
@@ -92,12 +92,12 @@
 
             <section class="stats">
                 <div class="stat">
-                    <span class="stat-number">3+</span>
+                    <span class="stat-number">2</span>
                     <span class="stat-label">Active members (pls join we need more)</span>
                 </div>
                 <div class="stat">
-                    <span class="stat-number">12</span>
-                    <span class="stat-label">Projects shipped</span>
+                    <span class="stat-number">0</span>
+                    <span class="stat-label">Projects shipped (right now)</span>
                 </div>
                 <div class="stat">
                     <span class="stat-number">∞</span>
