--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hack Club CV – Crescenta Valley High School</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/svg+xml" href="https://assets.hackclub.com/icon-square.svg">
 </head>
 <body>
     <!-- Orpheus Flag -->
