--- a/index.html
+++ b/index.html
@@ -154,8 +154,8 @@
             </div>
         </div>
 
-        <!-- Calendar Page -->
-        <div id="calendar" class="page">
+                <!-- Calendar Page -->
+            <div id="calendar" class="page">
             <section class="page-header">
                 <p class="eyebrow">Events</p>
                 <h1 class="ultratitle">What's happening.</h1>
@@ -164,7 +164,7 @@
 
             <section class="calendar-wrapper">
                 <div class="calendar-container">
-                    <iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=1&ctz=America%2FLos_Angeles&showPrint=0&title=Hack%20Club%20CV%20Events&src=Y2xhc3Nyb29tMTE4MDU5MzI4MDI3OTUyNDE2ODcwQGdyb3VwLmNhbGVuZGFyLmdvb2dsZS5jb20&color=%23b80672&showTabs=1&showNav=1&showDate=1&showCalendars=0&mode=MONTH" frameborder="0" scrolling="no"></iframe>
+                    <iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=1&ctz=America%2FLos_Angeles&showPrint=0&src=Y2xhc3Nyb29tMTE4MDU5MzI4MDI3OTUyNDE2ODcwQGdyb3VwLmNhbGVuZGFyLmdvb2dsZS5jb20&src=ZmFsa29ucm9ib3RpY3M1ODlAZ21haWwuY29t&color=%23b80672&color=%23f4511e" frameborder="0" scrolling="no"></iframe>
                 </div>
             </section>
 
