--- a/index.html
+++ b/index.html
@@ -162,9 +162,9 @@
                 <p class="subtitle">Check out our upcoming workshops, hackathons, and club meetings</p>
             </section>
 
-            <section class="calendar-wrapper">
+                    <section class="calendar-wrapper">
                 <div class="calendar-container">
-                    <iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=1&ctz=America%2FLos_Angeles&showPrint=0&src=Y2xhc3Nyb29tMTE4MDU5MzI4MDI3OTUyNDE2ODcwQGdyb3VwLmNhbGVuZGFyLmdvb2dsZS5jb20&src=ZmFsa29ucm9ib3RpY3M1ODlAZ21haWwuY29t&color=%23b80672&color=%23f4511e" frameborder="0" scrolling="no"></iframe>
+                    <iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=1&ctz=America%2FLos_Angeles&showPrint=0&title=Hack%20Club%20CV%20x%20Falkon%20Robotics&showTz=0&src=Y2xhc3Nyb29tMTE4MDU5MzI4MDI3OTUyNDE2ODcwQGdyb3VwLmNhbGVuZGFyLmdvb2dsZS5jb20&src=ZmFsa29ucm9ib3RpY3M1ODlAZ21haWwuY29t&color=%23b80672&color=%23f4511e" frameborder="0" scrolling="no"></iframe>
                 </div>
             </section>
 
